objects/disco__Form_Event__c.object
<CustomObject>
    <fields>
        <fullName>disco__Check_In_Mobile_Id__c</fullName>
        <externalId>true</externalId>
        <label>Check In Mobile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Check_In__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Check In</label>
        <referenceTo>disco__Check_In__c</referenceTo>
        <relationshipLabel>Form Events</relationshipLabel>
        <relationshipName>Form_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Event_Date_Time__c</fullName>
        <description>Date/Time that the Event occurred at</description>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Event_Location__c</fullName>
        <label>Event Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>disco__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Save and Continue</fullName>
                </value>
                <value>
                    <fullName>Save and Close</fullName>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Form_Mobile_Id__c</fullName>
        <externalId>true</externalId>
        <label>Form Mobile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Form Events</relationshipLabel>
        <relationshipName>Form_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Youreka_Mobile_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Youreka Mobile Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Form Event</label>
    <listViews>
        <fullName>disco__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FE-{000000000}</displayFormat>
        <label>Form Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>